compelet main part

--- a/src/input.css
+++ b/src/input.css
@@ -35,7 +35,7 @@
   @apply  text-xl md:text-2xl  text-sceondary  font-bold mt-2
 }
 .sliderPart {
-  @apply  relative w-[442px] aspect-[3/4] px-2 md:px-4 xl:px-6 bg-white mb-6
+  @apply  relative w-[442px] aspect-[3/4] px-2 md:px-4 xl:px-6 bg-white mb-6  
 }
 .sliderPart >img{
   @apply  block  w-full h-full object-cover select-none  rounded-lg md:rounded-xl lg:rounded-2xl 
@@ -44,7 +44,7 @@
   @apply bg-primary w-3 h-3 rounded-full
 }
 .prv-btn{
-  @apply p-1 md:p-2   z-50 w-fit bg-white rounded-md
+  @apply p-1 md:p-2   z-50 w-fit   rounded-md
 }
 .prv-btn-icon{
   @apply w-3 h-3 sm:w-4 sm:h-4 md:w-5 md:h-5
@@ -76,4 +76,23 @@
 }
 .description{
   @apply text-sm md:text-base text-sceondary font-normal
+}
+.sliderPart_2nd{
+  @apply bg-white px-12 rounded-2xl drop-shadow-lg w-[400px] aspect-[1.154/1]
+  flex flex-col justify-around pt-16 ;
+  min-height: 350px; 
+  max-height: 400px;  
+}
+.content{
+  @apply flex flex-col items-center 
+}
+.second-leftAdjustBfAf{
+  @apply  before:content-[''] before:absolute before:-bottom-2 before:left-0 md:before:left-1 before:w-2 before:h-2 before:bg-transparent before:rounded-tl-full before:shadow-sm-slider-shadow-5  md:before:shadow-slider-shadow-5
+
+  after:content-[''] after:absolute after:-top-2 after:left-0 md:after:left-1 after:w-2 after:h-2 after:bg-transparent after:rounded-bl-full after:shadow-sm-slider-shadow-6  md:after:shadow-slider-shadow-6
+}
+.second-rightAdjustBfAf{
+  @apply  before:content-[''] before:absolute before:-bottom-2 before:right-0 md:before:right-1 before:w-2 before:h-2 before:bg-transparent before:rounded-tr-full before:shadow-sm-slider-shadow-7  md:before:shadow-slider-shadow-7
+
+  after:content-[''] after:absolute after:-top-2 after:right-0 md:after:right-1 after:w-2 after:h-2 after:bg-transparent after:rounded-br-full after:shadow-sm-slider-shadow-8 md:after:shadow-slider-shadow-8
 }
